# multiset

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  README.md  multiset.cabal
Data/: IntMultiSet.hs  MultiSet.hs
include/: Typeable.h
test/: Main.hs  multiset-properties.hs
